updated spacing issues

--- a/blocks/cross-banner/cross-banner.css
+++ b/blocks/cross-banner/cross-banner.css
@@ -1,7 +1,3 @@
-.section.full-bleed-special.cross-banner-container {
-    padding: 0;
-}
-
 .cross-banner {
     display: flex;
     flex-direction: column;
@@ -68,10 +64,6 @@
     border-radius: 0.4375rem;
 }
 
-.bg-truthful-blue.cross-banner-container {
-    background: var(--bbl-color-grey-100);
-}
-
 .private .cross-banner-description {
     line-height: 1.1244rem;
 }
@@ -80,11 +72,11 @@
     padding: 3.125rem 0 0;
 }
 
-.wealth .bg-truthful-blue .cross-banner-title {
-  color: var(--bbl-color-white);
+.wealth .bg-grey-100 .cross-banner-title {
+    color: var(--bbl-color-white);
 }
 
-.wealth .bg-truthful-blue .cross-banner-description {
+.wealth .bg-grey-100 .cross-banner-description {
     line-height: 1.1244rem;
     color: var(--bbl-color-white);
 }
@@ -121,7 +113,7 @@ body.private
 }
 
 @media (width > 47.5rem) {
-    .section.full-bleed-special.cross-banner-container {
+    .section.full-bleed-bg.cross-banner-container {
         padding: 0 var(--bbl-space-600);
     }
 
@@ -140,7 +132,7 @@ body.private
 }
 
 @media (width > 64rem) {
-    .section.full-bleed-special.cross-banner-container {
+    .section.full-bleed-bg.cross-banner-container {
         padding: 0 var(--bbl-space-1050);
     }
 
@@ -184,5 +176,15 @@ body.private
     :is(.wealth, .private) :is(.cross-banner-title, .cross-banner-description) {
         flex: 0 0 38.86%;
         max-width: 38.86%;
+    }
+}
+
+@media (width > 120rem) {
+    .section.full-bleed-bg.cross-banner-container {
+        padding: 0;
+    }
+
+    .cross-banner-content {
+        padding-inline: var(--bbl-space-600);
     }
 }
