--- a/blocks/hero/hero.css
+++ b/blocks/hero/hero.css
@@ -1,7 +1,3 @@
-.section.section.full-bleed-bg.hero-container {
-    padding: 0;
-    overflow: hidden;
-}
 
 .hero-banner {
     width: 100%;
@@ -327,6 +323,10 @@ body.private .hero-banner-content-group :is(h1, h2, h3, h4, h5, h6) {
             :is(h1, h2, h3, h4, h5, h6), .hero-banner-logo-wrapper)::before {
         background: var(--bbl-color-white);
     }
+
+    .hero-banner-simple, .hero-banner-simple-logo-banner {
+        margin-bottom: 0;
+    } 
 }
 
 @media (width > 64rem) {
